--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,12 @@ src/litecoin-tx
 src/test/test_litecoin
 src/qt/test/test_litecoin-qt
 
-src/ducatus
-src/ducatusd
-src/ducatus-cli
-src/ducatus-tx
-src/test/test_ducatus
-src/qt/test/test_ducatus-qt
+src/ducatuscoin
+src/ducatuscoind
+src/ducatuscoin-cli
+src/ducatuscoin-tx
+src/test/test_ducatuscoin
+src/qt/test/test_ducatuscoin-qt
 
 # autoreconf
 Makefile.in
@@ -62,7 +62,7 @@ src/qt/test/moc*.cpp
 *.o
 *.o-*
 *.patch
-.ducatus
+.ducatuscoin
 .litecoin
 *.a
 *.pb.cc
@@ -82,13 +82,13 @@ src/qt/test/moc*.cpp
 # Compilation and Qt preprocessor part
 *.qm
 Makefile
-ducatus-qt
+ducatuscoin-qt
 litecoin-qt
 Litecoin-Qt.app
 
 # Unit-tests
 Makefile.test
-ducatus-qt_test
+ducatuscoin-qt_test
 litecoin-qt_test
 src/test/buildenv.py
 
