--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,13 @@ services:
                 ports:
                         - "9690:9690"
                 volumes:
-                        - ./data_dir:
+                        - ./data-dir:/home/ducatus/.ducatuscoin
 
         ducatuscoin:
                 build: ./
                 links:
                         - ducatuscoin-seed
-                command: bash -c 'ducatuscoind -server -listen -addnode=ducatuscoin-seed -rpcallowip="0.0.0.0" -rpcbind="0.0.0.0" -rpcuser=user -rpcpassword=pass -daemon; while true ; do ducatuscoin-cli -rpcwait generate 1000; done'
+                command: bash -c 'ducatuscoind -server -listen -addnode=ducatuscoin-seed -rpcallowip="0.0.0.0" -rpcbind="0.0.0.0" -rpcuser=user -rpcpassword=pass & while true ; do ducatuscoin-cli -rpcwait generate 1000; done'
+                volumes:
+                        - /home/ducatus/.ducatuscoin
 
-#        ducatuscoin-mac1:
-#                build: ./
-#                command: bash -c 'ducatuscoind -server -listen -rpcallowip="0.0.0.0" -rpcbind="0.0.0.0" -rpcuser=user -rpcpassword=pass -connect=ducatuscoin-mac2'
-#                links:
-#                        - ducatuscoin-mac2
-#
-#
-#        ducatuscoin-mac2:
-#                build: ./
-#                command: bash -c 'ducatuscoind -server -listen -rpcallowip="0.0.0.0" -rpcbind="0.0.0.0" -rpcuser=user -rpcpassword=pass ' #-daemon; while true ; do ducatuscoin-cli -rpcwait generate 10; sleep 10; done'
