--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '2'
 
 services:
         ducatuscoin-seed:
-                build: ducatuscoin
+                image: ducatuscoin
                 command: bash -c 'ducatuscoind -server -listen -rpcallowip="0.0.0.0" -rpcbind="0.0.0.0" -rpcuser=user -rpcpassword=pass '
                 ports:
                         - "9690:9690"
                 volumes:
-                        - ./data-dir:/home/ducatus/.ducatuscoin
+                        - ./data-dir:/root/.ducatuscoin
 
         ducatuscoin:
                 image: ducatuscoin
@@ -15,5 +15,5 @@ services:
                         - ducatuscoin-seed
                 command: bash -c 'ducatuscoind -server -listen -addnode=ducatuscoin-seed -rpcallowip="0.0.0.0" -rpcbind="0.0.0.0" -rpcuser=user -rpcpassword=pass & while true ; do ducatuscoin-cli -rpcwait generate 1000; done'
                 volumes:
-                        - /home/ducatus/.ducatuscoin
+                        - /root/.ducatuscoin
 
