--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.tar.gz
-univalue/
+#univalue/
 
 *.exe
 src/litecoin
@@ -43,7 +43,7 @@ src/config/stamp-h1
 share/setup.nsi
 share/qt/Info.plist
 
-src/univalue/gen
+#src/univalue/gen
 
 src/qt/*.moc
 src/qt/moc_*.cpp
