--- a/ducatuscoin.conf
+++ b/ducatuscoin.conf
@@ -7,3 +7,11 @@ upnp=0
 server=1
 
 rpcallowip=0.0.0.0/0
+rpcuser=dvuQgj1NvF5GcRz7y89nqeQa1AUXnT
+rpcpassword=ejDKCHGaNEyKlbHJ2HZiZWKOa4EW8s
+rpcallowip=127.0.0.1
+server=1
+daemon=1
+disablewallet=1
+maxconnections=494
+addnode=snode-0.ducatus.io
