Always restart node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         ducatuscoin:
                 image: ducatuscoin
                 command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/debug.log'
+                restart: always
                 ports:
                         - "9690:9690"
                         - "9691:9691"
