--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
                 ports:
                         - "9690:9690"
                         - "9691:9691"
+                restart: always
                 volumes:
                         - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
                         - ducatuscoin-volume:/root/.ducatuscoin
