Docker & Ansible deployment (#2)
* change ubuntu base image, remove old python deps, add env for timezone

* update docker for fast start

* Add ansible for deployment

* Update gitignore

Co-authored-by: s7500 <stezurrodion69@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '2'
 
 services:
-        ducatuscoin:
-                image: ducatuscoin
-                command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/debug.log'
-                restart: always
-                ports:
-                        - "9690:9690"
-                        - "9691:9691"
-                volumes:
-                        - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
-                        - ducatuscoin-volume:/root/.ducatuscoin
 
-volumes:
-        ducatuscoin-volume:
+  ducatuscoin:
+    image: ducatuscoin
+    build:
+        context: .
+        dockerfile: Dockerfile
+    command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/debug.log'
+    restart: always
+    ports:
+      - "9690:9690"
+      - "9691:9691"
+    volumes:
+      # - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
+      - ./data:/root/.ducatuscoin
+
+#volumes:
+#        ducatuscoin-volume:
