--- a/docker-compose.testnet.yml
+++ b/docker-compose.testnet.yml
@@ -14,7 +14,7 @@ services:
       - "9691:9691"
     volumes:
       # - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
-      - ./testnet-conf/node1/ducatuscoin.conf
+      - ./testnet-conf/ducatuscoin1.conf:/root/.ducatuscoin/ducatuscoin.conf
       - ./.docker-testnet/data1:/root/.ducatuscoin
 
 ducatuscoin2:
@@ -29,9 +29,25 @@ ducatuscoin2:
       - "9691:9691"
     volumes:
       # - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
-      - ./testnet-conf/node2/ducatuscoin.conf
+      - ./testnet-conf/ducatuscoin2.conf:/root/.ducatuscoin/ducatuscoin.conf
       - ./.docker-testnet/data2:/root/.ducatuscoin
 
+  agent:
+    image: portainer/agent:2.9.1
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
+  
+  portainer:
+    image: portainer/portainer-ce:2.9.1
+    command: -H tcp://tasks.agent:9001 --tlsskipverify
+    ports:
+      - "9443:9443"
+      - "9000:9000"
+      - "8000:8000"
+    volumes:
+      - ./docker-testnet/portainer_data:/data
+  
 
 #volumes:
 #        ducatuscoin-volume:
