test new params

--- a/docker-compose.testnet.yml
+++ b/docker-compose.testnet.yml
@@ -7,7 +7,9 @@ services:
     build:
         context: .
         dockerfile: Dockerfile
-    command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/testnet4/debug.log'
+    # command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/testnet4/debug.log'
+    # command: bash -c "sleep 10000"
+    command: ducatuscoind
     restart: always
     ports:
       - "18335:18335"
@@ -15,24 +17,24 @@ services:
     volumes:
       # - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
       - ./testnet-conf/ducatuscoin1.conf:/root/.ducatuscoin/ducatuscoin.conf
-      - ./.docker/data1:/root/.ducatuscoin/testnet4
+      - ./.docker/data1:/root/.ducatuscoin
 
     
 
-  ducatuscoin2:
-    image: rnbdeploy/ducatuscoin:latest
-    build:
-        context: .
-        dockerfile: Dockerfile
-    command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/testnet4/debug.log'
-    restart: always
-    ports:
-      - "28335:28335"
-      - "28336:28336"
-    volumes:
-      # - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
-      - ./testnet-conf/ducatuscoin2.conf:/root/.ducatuscoin/ducatuscoin.conf
-      - ./.docker/data2:/root/.ducatuscoin/testnet4
+  # ducatuscoin2:
+  #   image: rnbdeploy/ducatuscoin:latest
+  #   build:
+  #       context: .
+  #       dockerfile: Dockerfile
+  #   # command: bash -c 'ducatuscoind; sleep 1; tail -f /root/.ducatuscoin/testnet4/debug.log'
+  #   restart: always
+  #   ports:
+  #     - "28335:28335"
+  #     - "28336:28336"
+  #   volumes:
+  #     # - ./ducatuscoin.conf:/root/.ducatuscoin/ducatuscoin.conf
+  #     - ./testnet-conf/ducatuscoin2.conf:/root/.ducatuscoin/ducatuscoin.conf
+  #     - ./.docker/data2:/root/.ducatuscoin/testnet4
 
 
   # ducatuscoin1:
@@ -85,22 +87,46 @@ services:
 
 
 
-  agent:
-    image: portainer/agent:2.9.1
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
+  # agent:
+  #   image: portainer/agent:2.9.1
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - /var/lib/docker/volumes:/var/lib/docker/volumes
 
-  portainer:
-    image: portainer/portainer-ce:2.9.1
-    command: -H tcp://agent:9001 --tlsskipverify
-    ports:
-      - "9443:9443"
-      - "9000:9000"
-      - "8000:8000"
-    volumes:
-      - ./.docker/portainer_data:/data
+  # portainer:
+  #   image: portainer/portainer-ce:2.9.1
+  #   command: -H tcp://agent:9001 --tlsskipverify
+  #   ports:
+  #     - "9443:9443"
+  #     - "9000:9000"
+  #     - "8000:8000"
+  #   volumes:
+  #     - ./.docker/portainer_data:/data
   
+  elasticsearch:
+      image: "docker.elastic.co/elasticsearch/elasticsearch:7.2.0"
+      user: "1000"
+      environment:
+          - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+          - "discovery.type=single-node"
+      ports:
+          - "9200:9200"
+      volumes:
+          - ./.docker/elasticsearch_data:/usr/share/elasticsearch/data
+
+  kibana:
+      image: "docker.elastic.co/kibana/kibana:7.2.0"
+      ports:
+          - "5601:5601"
+
+  filebeat:
+      image: "docker.elastic.co/beats/filebeat:7.2.0"
+      user: root
+      volumes:
+          - ./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+          - /var/lib/docker:/var/lib/docker:ro
+          - /var/run/docker.sock:/var/run/docker.sock
+
 
 #volumes:
 #        ducatuscoin-volume:
