--- a/docker-compose.testnet.yml
+++ b/docker-compose.testnet.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.7'
 
 services:
 
@@ -28,7 +28,7 @@ services:
     restart: always
 
     volumes:
-      - ./testnet-conf/ducatuscoin1.conf:/root/.ducatuscoin/ducatuscoin.conf
+      - ./testnet-conf/ducatus_test.conf:/root/.ducatuscoin/ducatuscoin.conf
 
   agent:
     image: portainer/agent:2.9.1
@@ -40,9 +40,9 @@ services:
     image: portainer/portainer-ce:2.9.1
     command: -H tcp://agent:9001 --tlsskipverify
     ports:
-      - "9443:9443"
-      - "9000:9000"
-      - "8000:8000"
+      # - "9443:9443"
+      - "${PORTAINER_WEB_PORT}:9000"
+      - "${PORTAINER_EDGE_PORT}:8000"
     volumes:
       - ./.docker/portainer_data:/data
   
@@ -53,14 +53,14 @@ services:
           - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
           - "discovery.type=single-node"
       ports:
-          - "9200:9200"
+          - "${ELASTICSEARCH_PORT}:9200"
       volumes:
           - ./.docker/elasticsearch_data:/usr/share/elasticsearch/data
 
   kibana:
       image: "docker.elastic.co/kibana/kibana:7.2.0"
       ports:
-          - "5601:5601"
+          - "${KIBANA_PORT}:5601"
 
   filebeat:
       image: "docker.elastic.co/beats/filebeat:7.2.0"
