--- a/docker-compose.testnet.yml
+++ b/docker-compose.testnet.yml
@@ -29,6 +29,7 @@ services:
 
     volumes:
       - ./testnet-conf/ducatus_test.conf:/root/.ducatuscoin/ducatuscoin.conf
+      - ./testnet-conf/node_pwd:/root/.ducatuscoin/node_pwd
 
   agent:
     image: portainer/agent:2.9.1
